--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "geladeira",
   "version": "1.0.0",
   "dependencies": {
-    "nodemon": "^2.0.11"
+    "nodemon": "^2.0.11",
+    "typescript": "^4.3.5"
+  },
+  "scripts": {
+    "watch": "tsc index.ts --watch --target ES6 --removeComments true --noEmitOnError true --outDir dist",
+    "start": "npx nodemon ./dist/index.js"
   }
 }
