--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "watch": "tsc index.ts --watch --target ES6 --removeComments true --noEmitOnError true --outDir dist",
+    "watch": "tsc --watch --project ./tsconfig.json",
     "start": "npx nodemon ./dist/index.js"
   }
 }
